Fixed incorrect spacing

--- a/src/MudBlazor/Styles/components/_select.scss
+++ b/src/MudBlazor/Styles/components/_select.scss
@@ -1,4 +1,4 @@
-﻿.mud-select {
+.mud-select {
   display: flex;
   flex-grow: 1;
   position: relative;
@@ -41,10 +41,6 @@
       padding-right: 1rem;
     }
 
-    & .progress-indicator-circular--with-adornment {
-      padding-right: 3rem;
-    }
-
     & .mud-progress-linear {
       position: absolute;
       bottom: -1px;
@@ -77,6 +73,18 @@
   }
 }
 
+.mud-rtl-provider {
+  & .mud-select .progress-indicator-circular--with-adornment {
+    padding-right: 3rem;
+  }
+
+  &.mud-application-layout-rtl {
+    & .mud-select .progress-indicator-circular--with-adornment {
+      padding-right: 0rem !important;
+      padding-left: 3rem !important;
+    }
+  }
+}
 
 .mud-select > .mud-form-helpertext {
   margin-top: -21px;
